logo svg added and links updated

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 </header>
 
 <body>
-  <h1 id="home" class="home-heading">Welcome</h1>
+  <h1 id="about" class="about-heading">Welcome</h1>
 
   <footer class="footer" role="contentinfo">
 
