--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 </header>
 
 <body>
-  <h1 id="home" class="home-heading">Welcome</h1>
+  <h1 id="welcome" class="welcome--heading">Welcome</h1>
 
   <footer class="footer" role="contentinfo">
 
