--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,45 @@
 </header>
 
 <body>
-  <h1 id="home" class="home-heading">Welcome</h1>
+  <h1 id="projects" class="projects--heading">Projects</h1>
+
+
+  <div class="gallery">
+    <div class="gallery-item">
+      <div class="hovereffect">
+        <img class="img-responsive" src="http://placehold.it/350x250" alt="">
+        <div class="overlay">
+          <h2>Effect 13</h2>
+          <p>
+            <a href="#">LINK HERE</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="gallery-item">
+      <div class="hovereffect">
+        <img class="img-responsive" src="http://placehold.it/350x250" alt="">
+        <div class="overlay">
+          <h2>Effect 13</h2>
+          <p>
+            <a href="#">LINK HERE</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="gallery-item">
+      <div class="hovereffect">
+        <img class="img-responsive" src="http://placehold.it/350x250" alt="">
+        <div class="overlay">
+          <h2>Effect 13</h2>
+          <p>
+            <a href="#">LINK HERE</a>
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <footer class="footer" role="contentinfo">
 
