--- a/index.html
+++ b/index.html
@@ -5,37 +5,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="assets/logocopy2.png" type="image/png">
   <link rel="stylesheet" href="normalize.css" media="screen" title="no title">
-  <link rel="stylesheet" href="stylesheet.css" media="screen" title="no title">
-  <link rel="stylesheet" href="index.css" media="screen" title="no title">
-  <title>Jenessa W</title>
+  <link rel="stylesheet" href="Kano_Regular/stylesheet.css" media="screen" title="no title">
+  <link rel="stylesheet" href="fonts/billius/stylesheet.css" media="screen" title="no title">
+  <link rel="stylesheet" href="lpstyles.css" media="screen" title="no title">
+  <title>Jenessa White | Devloper, Sports Junkie, Music Lover</title>
 </head>
 
-<div class="nav-background">
-  <div class="nav-container">
-    <header class="nav-header">
-      <h1><a href="index.html" class="nav-logo">LOGO</a></h1>
-      <div class="nav-menu-button">|||</div>
-    </header>
-    <nav>
-      <ul class="nav-ul hide-ul">
-        <li><a class="nav-link" href="about.html">About</a></li>
-        <li><a class="nav-link" href="projects.html">My Projects</a></li>
-        <li><a class="nav-link" href="contact.html">Contact Me</a></li>
-      </ul>
-    </nav>
-  </div>
-</div>
-</header>
-
 <body>
-  <h1 id="home" class="home-heading">Welcome</h1>
 
-  <footer class="footer" role="contentinfo">
+  <!-- CONTENT -->
+  <div class="background">
+    <div class="content">
+      <div class="content-left">
 
-  </footer>
+        <img src="assets/jenessaWhiteCopy.png" alt="Jenessa White headshot" class="content-headshot">
+        <h1 class="content-name">Jenessa White</h1>
+      </div>
+      <div class="content-right">
 
-  <script src="src/index.js" charset="utf-8"></script>
+        <p class="content-text">
+          Thanks for visting!
+          <br>My site is currently under a redesign, so while I loved that you stopped by I can’t let you in quite yet. I know, I don’t like it either, but I can’t leave you completely hanging.
+          <br>Check me out other places on the web!
+          <br>You can send me an
+          <a href="mailto:jenessaw31@gmail.com" class="content-email">email</a> as well!
+        </p>
+
+        <div class="social-icons">
+          <a href="https://github.com/JenessaWhite" class="social-icons-link" target="_blank">
+            <img src="assets/github-logo-circle.png" alt="Github Logo" class="icons github">
+            <span class="social-icons-text">Github</span>
+          </a>
+          <a href="http://linkedin.com/in/jenessawhite" class="social-icons-link" target="_blank">
+            <img src="assets/linkedin-logo-circle.png" alt="LinkedIn Logo" class="icons linkedin">
+            <span class="social-icons-text">LinkedIn</span>
+          </a>
+          <a href="https://twitter.com/JNessView" class="social-icons-link" target="_blank">
+            <img src="assets/twitter-logo-circle.png" alt="Twitter Logo" class="icons twitter">
+            <span class="social-icons-text">Twitter</span>
+          </a>
+          <a href="https://www.instagram.com/thenessview/" class="social-icons-link" target="_blank">
+            <img src="assets/instagram-logo-circle.png" alt="Instagram Logo" class="icons instagram">
+            <span class="social-icons-text">Instagram</span>
+          </a>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
 </body>
 
 </html>
