--- a/index.html
+++ b/index.html
@@ -18,36 +18,39 @@
   <!-- CONTENT -->
   <div class="background">
     <div class="content">
-      <div class="content-left">
 
+      <div class="content-left">
         <img src="assets/jenessaWhiteCopy.png" alt="Jenessa White headshot" class="content-headshot">
         <h1 class="content-name">Jenessa White</h1>
       </div>
-      <div class="content-right">
 
+      <div class="content-right">
         <p class="content-text">
           Thanks for visting!
-          <br>My site is currently under a redesign, so while I loved that you stopped by I can’t let you in quite yet. I know, I don’t like it either, but I can’t leave you completely hanging.
+          <br>My site is currently under a redesign. I loved that you stopped by, but I can’t let you in quite yet. I know, I know, I don’t like it either, but I won’t leave you completely hanging.
           <br>Check me out other places on the web!
           <br>You can send me an
           <a href="mailto:jenessaw31@gmail.com" class="content-email">email</a> as well!
         </p>
 
         <div class="social-icons">
-          <a href="https://github.com/JenessaWhite" class="social-icons-link" target="_blank">
-            <img src="assets/github-logo-circle.png" alt="Github Logo" class="icons github">
+          <a href="https://github.com/JenessaWhite" class="social-icons-link social-hover" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" width="35" height="35" viewBox="0 0 35.3 35.3" alt="Github Logo" class="icons github"><path d="M23.7 34.7c-0.2 0.1-0.3 0.1-0.5 0.2 -0.7 0.1-1.1-0.2-1.1-0.9 0-1.3 0-2.6 0-3.9 0-1.5 0-2.9-1.1-4.2 0.7-0.1 1.3-0.2 1.8-0.3 3.9-0.9 5.9-3.3 6.1-7.4 0.1-2.1-0.2-3.9-1.6-5.6 -0.1-0.1-0.1-0.4-0.1-0.5 0.4-1.3 0.3-2.6-0.2-4 -0.1-0.3-0.3-0.4-0.6-0.4 -1.1 0.1-2.2 0.5-3.1 1.1 -0.9 0.6-1.7 0.7-2.8 0.5 -2.3-0.5-4.6-0.4-6.9 0.2 -0.3 0.1-0.6 0-0.9-0.2 -1.1-0.6-2.2-1.2-3.4-1.5 -1-0.2-1-0.1-1.3 0.8C7.8 9.8 7.8 10.9 8.1 12.1c0 0.2 0 0.4-0.1 0.6 -2.6 2.9-1.6 8.2 0.1 10.3 1.3 1.6 3.1 2.3 5.1 2.7 0.3 0.1 0.7 0.1 1 0.2 -0.3 0.8-0.6 1.5-0.9 2.2 -0.1 0.1-0.2 0.3-0.4 0.3 -1.9 0.8-3.6 0.2-4.7-1.6 -0.6-0.9-1.4-1.6-2.5-1.8 0 0-0.1 0-0.1 0 -0.3 0.1-0.6 0.2-0.9 0.2 0.2 0.2 0.3 0.6 0.5 0.7 1 0.6 1.6 1.5 2 2.5 0.6 1.6 1.9 2.3 3.5 2.5 0.8 0.1 1.6 0 2.5 0 0 1 0 2.1 0 3.3 0 0.6-0.6 0.9-1.4 0.6 -1.9-0.7-3.8-1.6-5.3-3C1 27-1.2 20.8 0.7 13.7 2.5 6.5 7.4 2.1 14.7 0.7 24.7-1.2 34.2 6.2 35.2 16.4 36 24.4 31.3 31.9 23.7 34.7zM14.2 25.9c0 0 0 0 0 0 0 0 0 0 0.1 0C14.3 25.9 14.3 25.9 14.2 25.9zM9.7 29c0.2 0.1 0.3 0.2 0.5 0.3 0.1 0 0.2-0.1 0.4-0.3 -0.3-0.1-0.4-0.2-0.6-0.2C9.8 28.8 9.8 29 9.7 29zM11.1 29.3c0 0.1 0.2 0.2 0.4 0.2 0.1 0 0.2-0.2 0.4-0.2 -0.1-0.1-0.2-0.2-0.5-0.5C11.2 29 11.1 29.1 11.1 29.3zM12.9 28.9c-0.1 0-0.3 0.2-0.4 0.3 0.1 0.1 0.2 0.2 0.3 0.4 0.2-0.2 0.3-0.3 0.4-0.4C13.1 29 12.9 28.8 12.9 28.9zM8.5 28.3c0.1 0.2 0.2 0.3 0.4 0.5 0.1-0.2 0.2-0.3 0.2-0.4 -0.1-0.1-0.3-0.3-0.4-0.4C8.7 28 8.5 28.2 8.5 28.3z"/></svg>
             <span class="social-icons-text">Github</span>
           </a>
-          <a href="http://linkedin.com/in/jenessawhite" class="social-icons-link" target="_blank">
-            <img src="assets/linkedin-logo-circle.png" alt="LinkedIn Logo" class="icons linkedin">
+          <a href="http://linkedin.com/in/jenessawhite" class="social-icons-link social-hover" target="_blank">
+            <!-- <img src="assets/linkedin-logo-circle.png" alt="LinkedIn Logo" class="icons linkedin"> -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 49.7 49.7" alt="LinkedIn Logo" class="icons linkedin"><path d="M29.4 21.3c-2.1 0-3.1 1.2-3.6 2v-1.7h-4c0.1 1.1 0 12 0 12h4v-6.7c0-0.4 0-0.7 0.1-1 0.3-0.7 0.9-1.5 2.1-1.5 1.4 0 2 1.1 2 2.7v6.4h4 0v-6.9C34 23 32 21.3 29.4 21.3zM25.7 23.3h0c0 0 0 0 0 0V23.3z"/><rect x="15.5" y="21.6" width="4" height="12"/><path d="M24.8 0C11.1 0 0 11.1 0 24.8c0 13.7 11.1 24.8 24.8 24.8 13.7 0 24.8-11.1 24.8-24.8C49.7 11.1 38.5 0 24.8 0zM38 36.1c0 1.1-0.9 1.9-2 1.9H13.5c-1.1 0-2-0.9-2-1.9V13.2c0-1.1 0.9-1.9 2-1.9h22.6c1.1 0 2 0.9 2 1.9V36.1z"/><path d="M17.6 15.8c-1.4 0-2.3 0.9-2.3 2.1 0 1.2 0.9 2.1 2.2 2.1h0c1.4 0 2.3-0.9 2.3-2.1C19.8 16.7 18.9 15.8 17.6 15.8z"/></svg>
             <span class="social-icons-text">LinkedIn</span>
           </a>
-          <a href="https://twitter.com/JNessView" class="social-icons-link" target="_blank">
-            <img src="assets/twitter-logo-circle.png" alt="Twitter Logo" class="icons twitter">
+          <a href="https://twitter.com/JNessView" class="social-icons-link social-hover" target="_blank">
+            <!-- <img src="assets/twitter-logo-circle.png" alt="Twitter Logo" class="icons twitter"> -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 49.7 49.7" alt="Twitter Logo" class="icons twitter"><path d="M24.8 0C11.1 0 0 11.1 0 24.8c0 13.7 11.1 24.8 24.8 24.8 13.7 0 24.8-11.1 24.8-24.8C49.7 11.1 38.5 0 24.8 0zM35.9 19.1c0 0.2 0 0.5 0 0.7 0 7.6-5.7 16.3-16.3 16.3 -3.2 0-6.2-0.9-8.8-2.6 0.4 0.1 0.9 0.1 1.4 0.1 2.7 0 5.1-0.9 7.1-2.4 -2.5 0-4.6-1.7-5.3-4 0.3 0.1 0.7 0.1 1.1 0.1 0.5 0 1-0.1 1.5-0.2 -2.6-0.5-4.6-2.8-4.6-5.6 0 0 0 0 0-0.1 0.8 0.4 1.7 0.7 2.6 0.7 -1.5-1-2.5-2.8-2.5-4.8 0-1 0.3-2 0.8-2.9 2.8 3.5 7 5.7 11.8 6 -0.1-0.4-0.1-0.9-0.1-1.3 0-3.2 2.6-5.7 5.7-5.7 1.6 0 3.1 0.7 4.2 1.8 1.3-0.3 2.5-0.7 3.6-1.4 -0.4 1.3-1.3 2.5-2.5 3.2 1.2-0.1 2.3-0.4 3.3-0.9C38 17.3 37 18.3 35.9 19.1z"/></svg>
             <span class="social-icons-text">Twitter</span>
           </a>
-          <a href="https://www.instagram.com/thenessview/" class="social-icons-link" target="_blank">
-            <img src="assets/instagram-logo-circle.png" alt="Instagram Logo" class="icons instagram">
+          <a href="https://www.instagram.com/thenessview/" class="social-icons-link social-hover" target="_blank">
+            <!-- <img src="assets/instagram-logo-circle.png" alt="Instagram Logo" class="icons instagram"> -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 49.7 49.7" alt="Instagram Logo" class="icons instagram"><path d="M24.8 29.8c2.7 0 5-2.2 5-5 0-1.1-0.4-2.1-0.9-2.9 -0.9-1.3-2.4-2.1-4-2.1 -1.7 0-3.1 0.8-4 2.1 -0.6 0.8-0.9 1.8-0.9 2.9C19.9 27.6 22.1 29.8 24.8 29.8z"/><polygon points="35.7 18.7 35.7 14.6 35.7 14 35.1 14 30.9 14 30.9 18.8 "/><path d="M24.8 0C11.1 0 0 11.1 0 24.8c0 13.7 11.1 24.8 24.8 24.8 13.7 0 24.8-11.1 24.8-24.8C49.7 11.1 38.5 0 24.8 0zM38.9 21.9v11.6c0 3-2.4 5.5-5.5 5.5H16.2c-3 0-5.5-2.4-5.5-5.5v-11.6 -5.8c0-3 2.4-5.5 5.5-5.5h17.3c3 0 5.5 2.4 5.5 5.5V21.9z"/><path d="M32.5 24.8c0 4.3-3.5 7.7-7.7 7.7 -4.3 0-7.7-3.5-7.7-7.7 0-1 0.2-2 0.6-2.9h-4.2v11.6c0 1.5 1.2 2.7 2.7 2.7h17.3c1.5 0 2.7-1.2 2.7-2.7v-11.6h-4.2C32.3 22.8 32.5 23.8 32.5 24.8z"/></svg>
             <span class="social-icons-text">Instagram</span>
           </a>
         </div>
