--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
   <link rel="stylesheet" href="Kano_Regular/stylesheet.css" media="screen" title="no title">
   <link rel="stylesheet" href="fonts/billius/stylesheet.css" media="screen" title="no title">
   <link rel="stylesheet" href="lpstyles.css" media="screen" title="no title">
-  <title>Jenessa White | Devloper, Sports Junkie, Music Lover</title>
+  <title>Jenessa White | Web Developer, Football and Basketball Enthusiast</title>
+  <meta name="keywords" content="jenessa diamond white" />
+  <meta name="description" content="Jenessa White is a front end developer in Minneapolis, Minnesota">
+  <meta itemprop="description" content="Jenessa White is a front end developer in Minneapolis, Minnesota" />
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Jenessa White | Web Developer, Football and Basketball Enthusiast">
+  <meta property="og:url" content="http://jenessawhite.com">
+  <meta property="og:description" content="Jenessa White is a front end developer in Minneapolis, Minnesota">
+  <meta property="og:image" content="assets/jenessaWhiteCopy.png" />
+  <meta property="og:image:url" content="assets/jenessaWhiteCopy.png" />
+  <meta name="twitter:card" content="summary">
+  <meta property="twitter:title" content="Jenessa White | Web Developer, Football and Basketball Enthusiast">
+  <meta property="twitter:description" content="Jenessa White is a front end developer in Minneapolis, Minnesota">
+  <meta name="twitter:url" content="http://jenessawhite.com" />
+  <meta name="twitter:image" content="assets/jenessaWhiteCopy.png">
+  <meta name="twitter:image:src" content="assets/jenessaWhiteCopy.png">
 </head>
 
 <body>
