--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="intro-box">
-        <h1 class="title intro-title">Hey…</h1>
+        <h1 class="title intro-title">Hey!</h1>
         <p class="text intro-text">
           My name is Jenessa. What do I do? I am a front end developer who designs and develops awesome websites and applications with great UI/UX. My biggest goal is to help the web and mobile applications we use hurt less to use them.
         </p>
