updated contact section and changed overlay hover

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Jenessa White | Front End Devloper">
     <meta name="author" content="Jenessa White">
     <title>Jenessa White | Front End Devloper by day...</title>
@@ -144,7 +143,12 @@
           </div>
         </div>
         <p class="mywork-text">
-          Check out more of my work on <span><a href="https://github.com/jenessawhite" target="_blank">Github</a></span>!</p>
+          Check out more of my work on <span><a href="https://github.com/jenessawhite" target="_blank">Github</a></span>!
+        </p>
+          <br>
+        <p>
+          If you want a more in-depth or old school way of looking at my experience check out my <span><a href="assets/JW_Resume.pdf" target="_blank">resume</a></span>.
+        </p>
       </div>
       <div class="blog-box" id="blog">
         <h2 class="title blog-title">Blog</h2>
@@ -157,7 +161,18 @@
       </div>
       <div class="contact-box" id="contact">
         <h2 class="title contact-title">Contact</h2>
-        <a href="mailto:jenessaw31@gmail.com?subject=Hey I want to chat!" class="contact-email">jenessaw31@gmail.com</a>
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+        	<div class="flipper">
+        		<div class="card-front">
+        			<!-- front content -->
+              Shoot me an email
+        		</div>
+        		<div class="card-back">
+        			<!-- back content -->
+              <a href="mailto:jenessaw31@gmail.com?subject=Hey I want to chat!" class="contact-email">jenessaw31@gmail.com</a>
+        		</div>
+        	</div>
+        </div>
       </div>
 
     </div>
@@ -166,6 +181,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
