--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
       <div class="mywork-box container-fluid" id="mywork">
         <h2 class="title mywork-title">My Work</h2>
         <div class="container-fluid">
-          <div class="row hover-row">
-            <div class="hovereffect col-sm-4 col-md-6">
+          <div class="row">
+            <div class="col-sm-6 col-md-6">
               <img class="img-fluid" src="./assets/shareIt.png" alt="">
-                <div class="overlay">
-                  <h2>Share-it | The easiest way to share music</h2>
+                <div class="center">
+                  <h2>Share-it</h2>
+                  <h5>The easiest way to share music</h5>
                   <p>
                     <a href="https://github.com/Share-It/shareit" class="mywork-social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
@@ -96,10 +97,11 @@
                   </p>
                 </div>
             </div>
-            <div class="hovereffect col-sm-4 col-md-6">
+            <div class="col-sm-6 col-md-6">
               <img class="img-fluid" src="./assets/revolutionz2.png" alt="">
                 <div class="overlay">
-                  <h2>Revolutionz | A crossover project e-commerce site</h2>
+                  <h2>Revolutionz</h2>
+                  <h5>A crossover project e-commerce site</h5>
                   <p>
                     <a href="https://github.com/Revolutionz-TIY/CrossoverProject" class="mywork-social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
@@ -111,11 +113,12 @@
                 </div>
             </div>
           </div>
-          <div class="row hover-row">
-            <div class="hovereffect col-sm-6 col-md-6">
+          <div class="row">
+            <div class="col-sm-6 col-md-6">
               <img class="img-fluid" src="./assets/trackIt2.png" alt="">
                 <div class="overlay">
-                  <h2>Track-It | The Classic To-Do List</h2>
+                  <h2>Track-It</h2>
+                  <h5>The Classic To-Do List</h5>
                   <p>
                     <a href="https://github.com/jenessawhite/track-it" class="mywork-social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
@@ -126,10 +129,11 @@
                   </p>
                 </div>
             </div>
-            <div class="hovereffect col-sm-6 col-md-6">
+            <div class="col-sm-6 col-md-6">
               <img class="img-fluid" src="./assets/novusTacos2.png" alt="">
                 <div class="overlay">
-                  <h2>Novus Tacos | Because, tacos</h2>
+                  <h2>Novus Tacos</h2>
+                  <h5>Because, tacos</h5>
                   <p>
                     <a href="https://github.com/novustacos/novustacos" class="mywork-social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
