--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <!-- NAVIGATION -->
     <nav class="navbar navbar-light navbar-fixed-top" role="navigation">
-      <button class="navbar-toggler hidden-md-up navbar-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
-      <div class="collapse navbar-toggleable-sm" id="navbarResponsive">
+      <button class="navbar-toggler hidden-sm-up navbar-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+      <div class="collapse navbar-toggleable-xs" id="navbarResponsive">
         <a class="navbar-brand" href="#">Jenessa White</a>
         <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
@@ -64,7 +64,9 @@
           My name is Jenessa. What do I do? I am a front end developer who designs and develops awesome websites and applications with great UI/UX. My biggest goal is to help the web and mobile applications we use hurt less to use them.
         </p>
       </div>
-      <div class="about-box" id="about">
+
+      <a id="about"></a>
+      <div class="about-box" >
         <h2 class="title about-title">Who am I?</h2>
         <p class="text about-text">
           I am a tv loving, sports addicted, music junkie, who’s passion lies in UX. When I’m not coding and thinking about coding, you can find me watching ESPN, cooking things I see on Pinterest, working as a personal trainer and listening to music and some great podcasts (ask me about them!)
@@ -78,15 +80,17 @@
           </ul>
         </div>
       </div>
-      <div class="mywork-box container-fluid" id="mywork">
+
+      <a id="mywork"></a>
+      <div class="mywork-box container-fluid">
         <h2 class="title mywork-title">My Work</h2>
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-6 col-md-6">
               <img class="img-fluid" src="./assets/shareIt.png" alt="">
                 <div class="center">
-                  <h2>Share-it</h2>
-                  <h5>The easiest way to share music</h5>
+                  <h4>Share-it</h4>
+                  <h6>The easiest way to share music</h6>
                   <p>
                     <a href="https://github.com/Share-It/shareit" class="mywork-social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
@@ -100,8 +104,8 @@
             <div class="col-sm-6 col-md-6">
               <img class="img-fluid" src="./assets/revolutionz2.png" alt="">
                 <div class="overlay">
-                  <h2>Revolutionz</h2>
-                  <h5>A crossover project e-commerce site</h5>
+                  <h4>Revolutionz</h4>
+                  <h6>A crossover project e-commerce site</h6>
                   <p>
                     <a href="https://github.com/Revolutionz-TIY/CrossoverProject" class="mywork-social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
@@ -117,8 +121,8 @@
             <div class="col-sm-6 col-md-6">
               <img class="img-fluid" src="./assets/trackIt2.png" alt="">
                 <div class="overlay">
-                  <h2>Track-It</h2>
-                  <h5>The Classic To-Do List</h5>
+                  <h4>Track-It</h4>
+                  <h6>The Classic To-Do List</h6>
                   <p>
                     <a href="https://github.com/jenessawhite/track-it" class="mywork-social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
@@ -132,8 +136,8 @@
             <div class="col-sm-6 col-md-6">
               <img class="img-fluid" src="./assets/novusTacos2.png" alt="">
                 <div class="overlay">
-                  <h2>Novus Tacos</h2>
-                  <h5>Because, tacos</h5>
+                  <h4>Novus Tacos</h4>
+                  <h6>Because, tacos</h6>
                   <p>
                     <a href="https://github.com/novustacos/novustacos" class="mywork-social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
@@ -156,7 +160,9 @@
         <!-- <div id="container">
         </div> -->
       </div>
-      <div class="blog-box" id="blog">
+
+      <a id="blog"></a>
+      <div class="blog-box">
         <h2 class="title blog-title">Blog</h2>
         <p class="text blog-text">
           Sometimes I like to express myself on the internet in posts not limited to a picture or 140 characters. You can find those on Medium along with some really dope articles that I've recommended.
@@ -210,7 +216,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-    <script src="dist/progressbar.js" charset="utf-8"></script>
+    <!-- <script src="dist/progressbar.js" charset="utf-8"></script> -->
     <script src="src/index.js" charset="utf-8"></script>
     <!-- Google Analytics -->
     <script>
