added photo. updated font. changed out resume

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TC7Z9M6');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Jenessa White | Front End Devloper">
+    <meta name="description" content="Jenessa White is a Front-End Engineer in the Twin Cities of Minnesota.">
     <meta name="author" content="Jenessa White">
-    <title>Jenessa White | Front End Devloper by day...</title>
+    <title>Jenessa White | Front-End Engineer by day...</title>
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="./src/normalize.css" media="screen" title="no title">
     <!-- Ionicons CSS -->
@@ -14,10 +21,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="/src/hover.css" media="all">
     <link rel="stylesheet" href="/src/index.css">
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TC7Z9M6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- NAVIGATION -->
     <nav class="navbar navbar-light navbar-fixed-top" role="navigation">
       <button class="navbar-toggler hidden-sm-up navbar-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -28,7 +40,7 @@
           <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#mywork">My Work</a>
+          <a class="nav-link " href="#mywork">Work</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#blog">Blog</a>
@@ -61,16 +73,22 @@
       <div class="intro-box">
         <h1 class="title intro-title">Hey!</h1>
         <p class="text intro-text">
-          My name is Jenessa. What do I do? I am a front end developer who designs and develops awesome websites and applications with great UI/UX. My biggest goal is to help the web and mobile applications we use hurt less to use them.
+          My name is Jenessa. What do I do? I am a Front-End Engineer who designs and develops awesome websites and applications with great UI/UX. My biggest goal is to help the web and mobile applications we use hurt less to use them.
         </p>
       </div>
 
       <a id="about"></a>
       <div class="about-box" >
         <h2 class="title about-title">Who am I?</h2>
-        <p class="text about-text">
-          I am a tv loving, sports addicted, music junkie, who’s passion lies in UX. When I’m not coding and thinking about coding, you can find me watching ESPN, cooking things I see on Pinterest, working as a personal trainer and listening to music and some great podcasts (ask me about them!)
-        </p>
+        <div class="about-box-text" >
+          <p class="text about-text">
+            I am a tv loving, sports addicted, music junkie, who’s passion lies in UX. When I’m not coding and thinking about coding, you can find me watching ESPN, cooking things I see on Pinterest, working as a personal trainer and listening to music and some great podcasts (ask me about them!)
+            Instilled with a passion for bringing beauty and ideal user experience to the web and to all mobile platforms. Using a suite of skills that I am continuously developing, I strive to bring positive and unique ideas that will enhance the products and services that we provide. My experience in customer service has provided me with an advantageous understanding of UI/UX.
+          </p>
+          <div class="about-box-image">
+            <img src="assets/jenessa-bw.jpg" alt="Jenessa White headshot" class="col-sm-6 col-md-6 img-fluid side-image ">
+          </div>
+        </div>
         <div class="about-facts-box container">
           <h4 class="about-facts-title title">fun facts:</h4>
           <ul class="text about-facts-text">
@@ -155,7 +173,7 @@
         </p>
         <br>
         <p>
-          If you want a more in-depth or old school way of looking at my experience check out my <span><a href="assets/JW_Resume.pdf" target="_blank">resume</a></span>.
+          If you want a more in-depth or old school way of looking at my experience check out my <span><a href="assets/JWResume.pdf" target="_blank">resume</a></span>.
         </p>
         <!-- <div id="container">
         </div> -->
