--- a/index.html
+++ b/index.html
@@ -53,28 +53,37 @@
     </nav>
     <!-- CONTENT -->
     <div class="container-fluid main">
-      <div class="heading">
-        <img src="assets/JenessaWhiteCopy.jpg" alt="Jenessa White headshot" class="img-fluid rounded-circle headshot">
-        <div class="social-group">
-          <a href="https://github.com/jenessawhite" class="heading-social-links" target="_blank">
-            <i class="icon ion-social-github-outline heading-social-button"></i>
-          </a>
-          <a href="https://linkedin.com/in/jenessawhite" class="heading-social-links" target="_blank">
-            <i class="icon ion-social-linkedin-outline  heading-social-button"></i>
-          </a>
-          <a href="https://twitter.com/jnessview" class="heading-social-links" target="_blank">
-            <i class="icon ion-social-twitter-outline  heading-social-button"></i>
-          </a>
-          <a href="https://instagram.com/thenessview" class="heading-social-links" target="_blank">
-            <i class="icon ion-social-instagram-outline  heading-social-button"></i>
-          </a>
+      <div class="container-fluid intro-content">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="heading">
+              <img src="assets/JenessaWhiteCopy.jpg" alt="Jenessa White headshot" class="img-fluid rounded-circle headshot">
+              <div class="social-group">
+                <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
+                  <i class="icon ion-social-github-outline heading-social-button"></i>
+                </a>
+                <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
+                  <i class="icon ion-social-linkedin-outline  heading-social-button"></i>
+                </a>
+                <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
+                  <i class="icon ion-social-twitter-outline  heading-social-button"></i>
+                </a>
+                <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
+                  <i class="icon ion-social-instagram-outline  heading-social-button"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="intro-box">
+              <h1 class="title intro-title">Hey!</h1>
+              <p class="text intro-text">
+                My name is Jenessa. What do I do? I am a Front-End Engineer who designs and develops awesome websites and applications with great UI/UX. My biggest goal is to help the web and mobile applications we use hurt less to use them.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="intro-box">
-        <h1 class="title intro-title">Hey!</h1>
-        <p class="text intro-text">
-          My name is Jenessa. What do I do? I am a Front-End Engineer who designs and develops awesome websites and applications with great UI/UX. My biggest goal is to help the web and mobile applications we use hurt less to use them.
-        </p>
       </div>
 
       <a id="about"></a>
@@ -86,7 +95,7 @@
             Instilled with a passion for bringing beauty and ideal user experience to the web and to all mobile platforms. Using a suite of skills that I am continuously developing, I strive to bring positive and unique ideas that will enhance the products and services that we provide. My experience in customer service has provided me with an advantageous understanding of UI/UX.
           </p>
           <div class="about-box-image">
-            <img src="assets/jenessa-bw.jpg" alt="Jenessa White headshot" class="col-sm-6 col-md-6 img-fluid side-image ">
+            <img src="assets/jenessa-bw.jpg" alt="Jenessa White headshot" class="col-md-6 img-fluid side-image ">
           </div>
         </div>
         <div class="about-facts-box container">
@@ -104,31 +113,28 @@
         <h2 class="title mywork-title">My Work</h2>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-6 col-md-6">
+            <div class="col-md-6">
+              <img class="img-fluid" src="./assets/demo.gif" alt="">
+                <div class="overlay">
+                  <h4>Bulb App</h4>
+                  <h6>A DIY project management app</h6>
+                  <p>
+                    <a href="https://github.com/jenessawhite/diyApp/" class="social-links" target="_blank">
+                      <i class="icon ion-social-github-outline"></i>
+                    </a>
+                  </p>
+                </div>
+            </div>
+            <div class="col-md-6">
               <img class="img-fluid" src="./assets/shareIt.png" alt="">
                 <div class="center">
                   <h4>Share-it</h4>
                   <h6>The easiest way to share music</h6>
                   <p>
-                    <a href="https://github.com/Share-It/shareit" class="mywork-social-links" target="_blank">
+                    <a href="https://github.com/Share-It/shareit" class="social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
                     </a>
-                    <a href="https://share-it.github.io/shareit/" class="mywork-social-links" target="_blank">
-                      <i class="icon ion-monitor"></i>
-                    </a>
-                  </p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-6">
-              <img class="img-fluid" src="./assets/revolutionz2.png" alt="">
-                <div class="overlay">
-                  <h4>Revolutionz</h4>
-                  <h6>A crossover project e-commerce site</h6>
-                  <p>
-                    <a href="https://github.com/Revolutionz-TIY/CrossoverProject" class="mywork-social-links" target="_blank">
-                      <i class="icon ion-social-github-outline"></i>
-                    </a>
-                    <a href="https://revolutionztiy.herokuapp.com" class="mywork-social-links" target="_blank">
+                    <a href="https://share-it.github.io/shareit/" class="social-links" target="_blank">
                       <i class="icon ion-monitor"></i>
                     </a>
                   </p>
@@ -136,31 +142,31 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6 col-md-6">
+            <div class="col-md-6">
               <img class="img-fluid" src="./assets/trackIt2.png" alt="">
                 <div class="overlay">
                   <h4>Track-It</h4>
                   <h6>The Classic To-Do List</h6>
                   <p>
-                    <a href="https://github.com/jenessawhite/track-it" class="mywork-social-links" target="_blank">
+                    <a href="https://github.com/jenessawhite/track-it" class="social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
                     </a>
-                    <a href="https://jenessawhite.github.io/track-it/" class="mywork-social-links" target="_blank">
+                    <a href="https://jenessawhite.github.io/track-it/" class="social-links" target="_blank">
                       <i class="icon ion-monitor"></i>
                     </a>
                   </p>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-6">
+            <div class="col-md-6">
               <img class="img-fluid" src="./assets/novusTacos2.png" alt="">
                 <div class="overlay">
                   <h4>Novus Tacos</h4>
                   <h6>Because, tacos</h6>
                   <p>
-                    <a href="https://github.com/novustacos/novustacos" class="mywork-social-links" target="_blank">
+                    <a href="https://github.com/novustacos/novustacos" class="social-links" target="_blank">
                       <i class="icon ion-social-github-outline"></i>
                     </a>
-                    <a href="https://novustacos.github.io/novustacos/" class="mywork-social-links" target="_blank">
+                    <a href="https://novustacos.github.io/novustacos/" class="social-links" target="_blank">
                       <i class="icon ion-monitor"></i>
                     </a>
                   </p>
@@ -189,23 +195,24 @@
         <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 
       </div>
-      <div class="contact-box" id="contact">
-        <h2 class="title contact-title">Contact</h2>
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-        	<div class="flipper">
-        		<div class="card-front">
-        			<!-- front content -->
-              Shoot me an email
-        		</div>
-        		<div class="card-back">
-        			<!-- back content -->
-              <a href="mailto:jenessaw31@gmail.com?subject=Hey I want to chat!" class="contact-email">jenessaw31@gmail.com</a>
-        		</div>
-        	</div>
-        </div>
-      </div>
+
       <!-- FOOTER -->
       <footer class="footer" role="contentinfo" >
+        <div id="contact">
+          <h2 class="title contact-title">Contact</h2>
+          <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+          	<div class="flipper">
+          		<div class="card-front">
+          			<!-- front content -->
+                Shoot me an email
+          		</div>
+          		<div class="card-back">
+          			<!-- back content -->
+                <a href="mailto:jenessaw31@gmail.com?subject=Hey I want to chat!" class="contact-email">jenessaw31@gmail.com</a>
+          		</div>
+          	</div>
+          </div>
+        </div>
         <div class="footer-social-group">
           <a href="https://github.com/jenessawhite" class="footer-social-links" target="_blank">
             <i class="icon ion-social-github-outline footer-social-button"></i>
