layout updates and project change out

--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@
           </div>
         </div>
         <div class="footer-social-group">
-          <a href="https://github.com/jenessawhite" class="footer-social-links" target="_blank">
+          <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
             <i class="icon ion-social-github-outline footer-social-button"></i>
           </a>
-          <a href="https://linkedin.com/in/jenessawhite" class="footer-social-links" target="_blank">
+          <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
             <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
           </a>
-          <a href="https://twitter.com/jnessview" class="footer-social-links" target="_blank">
+          <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
             <i class="icon ion-social-twitter-outline  footer-social-button"></i>
           </a>
-          <a href="https://instagram.com/thenessview" class="footer-social-links" target="_blank">
+          <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
             <i class="icon ion-social-instagram-outline  footer-social-button"></i>
           </a>
         </div>
