--- a/index.html
+++ b/index.html
@@ -31,209 +31,35 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <!-- NAVIGATION -->
-    <nav class="navbar navbar-light navbar-fixed-top" role="navigation">
-      <button class="navbar-toggler hidden-sm-up navbar-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
-      <div class="collapse navbar-toggleable-xs" id="navbarResponsive">
-        <a class="navbar-brand" href="#">Jenessa White</a>
-        <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="#mywork">Work</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#blog">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
-        </ul>
-      </div>
-    </nav>
+
     <!-- CONTENT -->
     <div class="container-fluid main">
-      <div class="container-fluid intro-content">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="heading">
-              <img src="assets/JenessaWhiteCopy.jpg" alt="Jenessa White headshot" class="img-fluid rounded-circle headshot">
-              <div class="social-group">
-                <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
-                  <i class="icon ion-social-github-outline heading-social-button"></i>
-                </a>
-                <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
-                  <i class="icon ion-social-linkedin-outline  heading-social-button"></i>
-                </a>
-                <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
-                  <i class="icon ion-social-twitter-outline  heading-social-button"></i>
-                </a>
-                <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
-                  <i class="icon ion-social-instagram-outline  heading-social-button"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="intro-box">
-              <h1 class="title intro-title">Hey!</h1>
-              <p class="text intro-text">
-                My name is Jenessa. What do I do? I am a Front-End Engineer who designs and develops awesome websites and applications with great UI/UX. My biggest goal is to help the web and mobile applications we use hurt less to use them.
-              </p>
-            </div>
-          </div>
-        </div>
+      <h1>New Site Coming... </h1>
+      <div id="countdown">
       </div>
 
-      <a id="about"></a>
-      <div class="about-box" >
-        <h2 class="title about-title">Who am I?</h2>
-        <div class="about-box-text" >
-          <p class="text about-text">
-            I am a tv loving, sports addicted, music junkie, who’s passion lies in UX. When I’m not coding and thinking about coding, you can find me watching ESPN, cooking things I see on Pinterest, working as a personal trainer and listening to music and some great podcasts (ask me about them!)
-            Instilled with a passion for bringing beauty and ideal user experience to the web and to all mobile platforms. Using a suite of skills that I am continuously developing, I strive to bring positive and unique ideas that will enhance the products and services that we provide. My experience in customer service has provided me with an advantageous understanding of UI/UX.
-          </p>
-          <div class="about-box-image">
-            <img src="assets/jenessa-bw.jpg" alt="Jenessa White headshot" class="col-md-6 img-fluid side-image ">
-          </div>
-        </div>
-        <div class="about-facts-box container">
-          <h4 class="about-facts-title title">fun facts:</h4>
-          <ul class="text about-facts-text">
-            <li>I make bowties for fun.</li>
-            <li>I’m in love with fonts.</li>
-            <li>I am a certified personal trainer.</li>
-          </ul>
-        </div>
-      </div>
-
-      <a id="mywork"></a>
-      <div class="mywork-box container-fluid">
-        <h2 class="title mywork-title">My Work</h2>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-fluid" src="./assets/demo.gif" alt="">
-                <div class="overlay">
-                  <h4>Bulb App</h4>
-                  <h6>A DIY project management app</h6>
-                  <p>
-                    <a href="https://github.com/jenessawhite/diyApp/" class="social-links" target="_blank">
-                      <i class="icon ion-social-github-outline"></i>
-                    </a>
-                  </p>
-                </div>
-            </div>
-            <div class="col-md-6">
-              <img class="img-fluid" src="./assets/shareIt.png" alt="">
-                <div class="center">
-                  <h4>Share-it</h4>
-                  <h6>The easiest way to share music</h6>
-                  <p>
-                    <a href="https://github.com/Share-It/shareit" class="social-links" target="_blank">
-                      <i class="icon ion-social-github-outline"></i>
-                    </a>
-                    <a href="https://share-it.github.io/shareit/" class="social-links" target="_blank">
-                      <i class="icon ion-monitor"></i>
-                    </a>
-                  </p>
-                </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-fluid" src="./assets/trackIt2.png" alt="">
-                <div class="overlay">
-                  <h4>Track-It</h4>
-                  <h6>The Classic To-Do List</h6>
-                  <p>
-                    <a href="https://github.com/jenessawhite/track-it" class="social-links" target="_blank">
-                      <i class="icon ion-social-github-outline"></i>
-                    </a>
-                    <a href="https://jenessawhite.github.io/track-it/" class="social-links" target="_blank">
-                      <i class="icon ion-monitor"></i>
-                    </a>
-                  </p>
-                </div>
-            </div>
-            <div class="col-md-6">
-              <img class="img-fluid" src="./assets/novusTacos2.png" alt="">
-                <div class="overlay">
-                  <h4>Novus Tacos</h4>
-                  <h6>Because, tacos</h6>
-                  <p>
-                    <a href="https://github.com/novustacos/novustacos" class="social-links" target="_blank">
-                      <i class="icon ion-social-github-outline"></i>
-                    </a>
-                    <a href="https://novustacos.github.io/novustacos/" class="social-links" target="_blank">
-                      <i class="icon ion-monitor"></i>
-                    </a>
-                  </p>
-                </div>
-            </div>
-          </div>
-        </div>
-        <p>
-          Check out more of my work on <span><a href="https://github.com/jenessawhite" target="_blank">Github</a></span>!
-        </p>
-        <br>
-        <p>
-          If you want a more in-depth or old school way of looking at my experience check out my <span><a href="assets/JWResume.pdf" target="_blank">resume</a></span>.
-        </p>
-        <!-- <div id="container">
-        </div> -->
-      </div>
-
-      <a id="blog"></a>
-      <div class="blog-box">
-        <h2 class="title blog-title">Blog</h2>
-        <p class="text blog-text">
-          Sometimes I like to express myself on the internet in posts not limited to a picture or 140 characters. You can find those on Medium along with some really dope articles that I've recommended.
-        </p>
-        <blockquote class="embedly-card" data-card-key="11ecd3307e964c7f95859c2430802288" data-card-controls="0" data-card-type="article"><h4><a href="https://medium.com/@jenessawhite/latest">Jenessa White - Latest</a></h4><p>Latest stories published by Jenessa White on Medium. A young woman that is embracing the slash generation. A lover of technology, sports, development, personal growth and wellness. I love a great journey.</p></blockquote>
-        <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-
-      </div>
-
-      <!-- FOOTER -->
-      <footer class="footer" role="contentinfo" >
-        <div id="contact">
-          <h2 class="title contact-title">Contact</h2>
-          <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-          	<div class="flipper">
-          		<div class="card-front">
-          			<!-- front content -->
-                Shoot me an email
-          		</div>
-          		<div class="card-back">
-          			<!-- back content -->
-                <a href="mailto:jenessaw31@gmail.com?subject=Hey I want to chat!" class="contact-email">jenessaw31@gmail.com</a>
-          		</div>
-          	</div>
-          </div>
-        </div>
-        <div class="footer-social-group">
-          <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
-            <i class="icon ion-social-github-outline footer-social-button"></i>
-          </a>
-          <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
-            <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
-          </a>
-          <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
-            <i class="icon ion-social-twitter-outline  footer-social-button"></i>
-          </a>
-          <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
-            <i class="icon ion-social-instagram-outline  footer-social-button"></i>
-          </a>
-        </div>
-        <div>
-          &copy; 2016 -
-          <script type="text/javascript">
-            document.write(new Date().getFullYear());
-          </script> Jenessa White.
-        </div>
-      </footer>
+<div class="footer">
+  <div class="footer-social-group">
+    <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
+      <i class="icon ion-social-github-outline footer-social-button"></i>
+    </a>
+    <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
+      <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
+    </a>
+    <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
+      <i class="icon ion-social-twitter-outline  footer-social-button"></i>
+    </a>
+    <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
+      <i class="icon ion-social-instagram-outline  footer-social-button"></i>
+    </a>
+  </div>
+  <div>
+    &copy; 2016 -
+    <script type="text/javascript">
+      document.write(new Date().getFullYear());
+    </script> Jenessa White.
+  </div>
+</div>
 
     </div>
 
