--- a/index.html
+++ b/index.html
@@ -37,29 +37,29 @@
       <h1>New Site Coming... </h1>
       <div id="countdown">
       </div>
-
-<div class="footer">
-  <div class="footer-social-group">
-    <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
-      <i class="icon ion-social-github-outline footer-social-button"></i>
-    </a>
-    <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
-      <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
-    </a>
-    <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
-      <i class="icon ion-social-twitter-outline  footer-social-button"></i>
-    </a>
-    <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
-      <i class="icon ion-social-instagram-outline  footer-social-button"></i>
-    </a>
-  </div>
-  <div>
-    &copy; 2016 -
-    <script type="text/javascript">
-      document.write(new Date().getFullYear());
-    </script> Jenessa White.
-  </div>
-</div>
+      <h2>#may1reboot</h2>
+      <div class="footer">
+        <div class="footer-social-group">
+          <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
+            <i class="icon ion-social-github-outline footer-social-button"></i>
+          </a>
+          <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
+            <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
+          </a>
+          <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
+            <i class="icon ion-social-twitter-outline  footer-social-button"></i>
+          </a>
+          <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
+            <i class="icon ion-social-instagram-outline  footer-social-button"></i>
+          </a>
+        </div>
+        <div>
+          &copy; 2016 -
+          <script type="text/javascript">
+            document.write(new Date().getFullYear());
+          </script> Jenessa White.
+        </div>
+      </div>
 
     </div>
 
