--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     <meta name="author" content="Jenessa White">
     <title>Jenessa White | Front-End Engineer by day...</title>
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="./src/normalize.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./styles/normalize.css" media="screen" title="no title">
     <!-- Ionicons CSS -->
-    <link rel="stylesheet" href="./src/ionicons.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./styles/ionicons.min.css" media="screen" title="no title">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/src/hover.css" media="all">
-    <link rel="stylesheet" href="/src/index.css">
+    <link rel="stylesheet" href="/styles/index.css">
   </head>
 
   <body>
